--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ body {
     font-weight: 300;
     font-size: 18px;
 }
+
+.mybutton {
+    background-color: cornflowerblue;
+    color: cadetblue;padding:10px 20px ;
+    border: none;
+    cursor: pointer;
+}
